--- a/MediaRecorder/Application/src/main/AndroidManifest.xml
+++ b/MediaRecorder/Application/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true"
         tools:ignore="GoogleAppIndexingWarning">
         <!-- Since this sample records video from camera preview, locking the orientation to
             landscape. Landscape mode offers us more preview space with standard video aspect
